infrastructure/ingress/kong-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kong-ingress
spec:
  tls:
  - hosts:
    - api.daf.teamdigitale.it
  rules:
  - host: api.daf.teamdigitale.it
    http:
      paths:
      - path: /
        backend:
          serviceName: kong-proxy
          servicePort: 8000
      - path: /stanbol
        backend:
          serviceName: ontonehub
          servicePort: 8000
